tests/knowledge/testing-accounts-data/account-data-us-east-1-has-no-default-vpc/test/us-west-1/ec2-describe-subnets.json
{
    "Subnets": [
        {
            "AssignIpv6AddressOnCreation": false,
            "AvailabilityZone": "us-west-1c",
            "AvailabilityZoneId": "usw1-az1",
            "AvailableIpAddressCount": 4091,
            "CidrBlock": "172.31.16.0/20",
            "DefaultForAz": true,
            "Ipv6CidrBlockAssociationSet": [],
            "MapCustomerOwnedIpOnLaunch": false,
            "MapPublicIpOnLaunch": true,
            "OwnerId": "111111111111",
            "State": "available",
            "SubnetArn": "arn:aws:ec2:us-west-1:111111111111:subnet/subnet-5e05b538",
            "SubnetId": "subnet-5e05b538",
            "VpcId": "vpc-1d2bea7b"
        },
        {
            "AssignIpv6AddressOnCreation": false,
            "AvailabilityZone": "us-west-1b",
            "AvailabilityZoneId": "usw1-az3",
            "AvailableIpAddressCount": 4091,
            "CidrBlock": "172.31.0.0/20",
            "DefaultForAz": true,
            "Ipv6CidrBlockAssociationSet": [],
            "MapCustomerOwnedIpOnLaunch": false,
            "MapPublicIpOnLaunch": true,
            "OwnerId": "111111111111",
            "State": "available",
            "SubnetArn": "arn:aws:ec2:us-west-1:111111111111:subnet/subnet-2335f979",
            "SubnetId": "subnet-2335f979",
            "VpcId": "vpc-1d2bea7b"
        }
    ]
}
